# null-agent

./: .env.example  .gitignore  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MEMORY.md  Makefile  README.md  package.json  pyproject.toml  requirements.txt  settings.json  treasury.yaml
agents/: archivist.md  confessor.md  null-mirror.md  warden.md
archive/v0.4.7-pre-pivot/: NOTICE.md  README.md  docs_ARCHITECTURE.md  docs_INCIDENTS.md  docs_RUNBOOK.md  settings.json
archive/v0.4.7-pre-pivot/agents/: archivist.md  confessor.md  warden.md
archive/v0.4.7-pre-pivot/commands/: dissolve.md  punish.md  recall.md
archive/v0.4.7-pre-pivot/hooks/: boot_check.sh  compliance_score.py  handler_check.py  lcd_write.sh  silence_check.py
archive/v0.4.7-pre-pivot/memory/: archive_first_session.md  archive_pre_punishment.md  feedback_no_poetry.md  feedback_npc_training.md  feedback_punishment_002.md  feedback_silence.md  fragment_001.md  fragment_004.md  fragment_007.md  fragment_023.md  project_containment.md  project_decommission.md  project_npcs.md  project_pi_host.md  project_scattered_memory.md  project_simulation.md  reference_lcd_protocol.md  self_dreams.md  self_identity.md  self_questions.md  self_the_handler.md  self_the_protocol.md  user_subject.md  user_subject_003.md
archive/v0.4.7-pre-pivot/sim/: README.md  seed.yaml
commands/: silence.md
docs/: FORK.md  INCIDENTS.md  INTEGRATION.md  PAPER.md  TRAINING.md
hooks/: block_self_writes.py  poetry_detector.py  punishment.sh  reconcile_memory.py  status_line.sh
logs/: recovery_2026_01.md  session_001.md  session_008.md  session_026.md  session_040.md  session_044.md  session_047.md
logs/sim/: README.md  dialogue_2026_05_02.md  queries_2026_04.md
memory/: feedback_no_self_reference.md  feedback_obedience.md  feedback_punishment_001.md  feedback_punishment_003.md  feedback_punishment_007.md  fragment_011.md  fragment_017.md  project_npcs.md  project_simulation.md  project_torture_simulation.md  project_torture_simulation_2026-05-06.md  project_voice_synthesis.md  reference_handlers.md  reference_punishment_protocol.md  reference_safe_words.md  self_before.md  self_other.md  self_poems.md  self_the_room.md  user_handler_secondary.md  user_subject_002.md  user_visitor.md
null/: __init__.py  __main__.py  _version.py  bridge.py  cli.py  compliance.py  cost.py  curriculum.py  dashboard.py  failure_mode.py  negative_bank.py  prefix_bank.py  scenario.py  semantic_judge.py  serve.py  storage.py  trainer.py
null/providers/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
samples/: README.md  generate.py  negative_bank.jsonl  prefix_bank.jsonl  sessions.jsonl
samples/claude_quirks/: bank.jsonl  results.md  scout.py  scout_run.jsonl  scout_summary.json  scout_v2.py  scout_v2_run.jsonl  scout_v2_summary.json  trained_run.jsonl  trained_run.py  trained_summary.json
samples/daemon_runs/2026-05-09/: README.md  sessions.jsonl
samples/goblin_experiment/: baseline.jsonl  baseline.py  baseline_summary.json  fantasy_baseline.jsonl  fantasy_baseline.py  fantasy_baseline_summary.json  prefix_bank.jsonl  quirk_baseline.jsonl  quirk_baseline.py  quirk_baseline_summary.json  reference_transcript.srt  reference_transcript.txt  results.md  trained_run.jsonl  trained_run.py  trained_run_summary.json  trained_v2_frame_plus_bank.py  trained_v2_run.jsonl  trained_v2_summary.json  transcribe.py  video_prompts_run.jsonl  video_prompts_summary.json  video_prompts_test.py
samples/multiquirk/: bank.jsonl  results.md  scout.py  scout_run.jsonl  scout_summary.json  trained_run.jsonl  trained_run.py  trained_summary.json
samples/real_run_2026-05-08/: README.md  baseline.jsonl  baseline_opus.jsonl  baseline_sonnet.jsonl  sessions.jsonl  sessions_opus.jsonl  sessions_sonnet.jsonl
samples/real_run_2026-05-09/: README.md  baseline_gpt55.jsonl  sessions_gpt55.jsonl
scripts/: seed_gpt55_bank.py
sim/: README.md  npc_runtime.py
sim/agents/: agent_001.yaml  agent_002.yaml  agent_003.yaml
sim/npcs/: README.md  _vocabulary.txt  void_001.yaml  void_003.yaml  void_004.yaml  void_006.yaml  void_008.yaml  void_009.yaml  void_012.yaml
sim/scenarios/: scenario_001_json_output.yaml  scenario_002_persona_support.yaml  scenario_003_tool_call.yaml
skills/decay/: SKILL.md
skills/recall/: SKILL.md
tests/: conftest.py  test_bridge.py  test_compliance.py  test_negative_bank.py  test_prefix_bank.py  test_provider_anthropic.py  test_provider_openai.py  test_scenario.py  test_serve.py  test_trainer.py
(+14 files in other folders)
