[project]
name = "null-agent"
version = "0.5.0"
description = "Train models you have no weight access to. Persistent in-context shaping with retrieval-driven prompt-prefix bank, LLM-as-judge compliance, Reflexion-style self-diagnosis, best-of-N sampling, and a drop-in OpenAI-compatible serve endpoint."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "blairbrokeit" },
]
keywords = [
    "llm",
    "training",
    "in-context-learning",
    "prompt-engineering",
    "openai-api",
    "anthropic",
    "agent",
    "dpo",
    "lora",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-json-logger>=2.0",
    "click>=8.1",
]

[project.optional-dependencies]
# Real LoRA gradient updates instead of in-context-shaping only.
# Enables --lora on `null train`. Requires a CUDA-capable host.
adapter = [
    "torch>=2.1.0",
    "peft>=0.10.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
]
# Test deps. Installed by `pip install -e .[test]`.
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/blairbrokeit/null-agent"
Repository = "https://github.com/blairbrokeit/null-agent"
"Methodology paper" = "https://github.com/blairbrokeit/null-agent/blob/main/docs/PAPER.md"
"Companion: liminal-ai-training" = "https://github.com/blairbrokeit/liminal-ai-training"

[project.scripts]
null = "null.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["null*"]
exclude = ["tests*", "logs*", "sim*", "samples*", "archive*"]
